--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ dms.prototype.toString = function() {
     return this.d + " " + this.m + " " + this.s;
 }
 dms.dms2dd = function(ms) {
-    var dd = parseFloat(parseInt(ms.d));
+    var dd = parseFloat(Math.abs(parseInt(ms.d)));
     var s = (ms.m * 60 + ms.s) / 3600;
     dd += s;
     return dd;
@@ -64,20 +64,20 @@ dd.prototype.valid_lon = function() {
 }
 ddms = {};
 ddms.parse_dms = function(s) {
-    var m = s.match(/((-?[0-9]{1,2}([NnSs])?)((\s*,\s*)|(\s+))([0-9]{1,2})((\s*,\s*)|(\s+))([0-9]{1,2}))((\s*,\s*)|(\s+))((-?[0-9]{1,3}([EeWw])?)((\s*,\s*)|(\s+))([0-9]{1,2})((\s*,\s*)|(\s+))([0-9]{1,2}))/);
+    var m = s.match(/(((-?[0-9]{1,2})([NnSs])?)((\s*,\s*)|(\s+))(([0-9]{1,2})(m|')?)((\s*,\s*)|(\s+))(([0-9]{1,2})(s|")?))((\s*,\s*)|(\s+))(((-?[0-9]{1,3})([EeWw])?)((\s*,\s*)|(\s+))(([0-9]{1,2})(m|')?)((\s*,\s*)|(\s+))(([0-9]{1,2})(s|")?))/);
     var ks = [
         'full', 
-        'full_lat', 'lat_deg', 'lat_dir',
+        'full_lat', null, 'lat_deg', 'lat_dir',
         null, null, null,
-        'lat_m',
+        null, 'lat_m', null,
         null, null, null,
-        'lat_s',
+        null, 'lat_s', null,
         null, null, null,
-        'full_lon', 'lon_deg', 'lon_dir',
+        'full_lon', null, 'lon_deg', 'lon_dir',
         null, null, null,
-        'lon_m',
+        null, 'lon_m', null,
         null, null, null,
-        'lon_s'
+        null, 'lon_s', null
     ];
     var parsed = false;
     if(m) {
