--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ $(document).ready(function() {
 
     });
     $('#help h3').click(function() {
-        $(this).parent().find('p, div').toggle();
+        $(this).siblings().toggle();
     });
     $('#help h3').click();
 });
