--- a/index.html
+++ b/index.html
@@ -37,9 +37,14 @@ dms.dms2dd = function(ms) {
     return dd;
 }
 dms.dd2dms = function(dd,t) {
+    var dd = parseFloat(parseFloat(dd).toFixed(6));
     var d = Math.abs(parseInt(dd));
-    var m = Math.floor(((Math.abs(dd) - d)*3600)/60);
+    var m = Math.floor(((Math.abs(dd) - d)*60));
     var s = ((Math.abs(dd)-d)*3600)%60;
+    if(parseInt(s) == 59 && Math.round(s) == 60) {
+        s = 0;
+        m += 1;
+    }
     if(dd<0) d *= -1;
     return new dms(d, m, s, t);
 }
@@ -84,7 +89,7 @@ dd.prototype.valid_lon = function() {
 }
 ddms = {};
 ddms.parse_dms = function(s) {
-    var m = s.match(/(((-?[0-9]{1,2})([NnSs])?)((\s*,\s*)|(\s+))(([0-9]{1,2})(m|')?)((\s*,\s*)|(\s+))(([0-9]{1,2})(s|")?))((\s*,\s*)|(\s+))(((-?[0-9]{1,3})([EeWw])?)((\s*,\s*)|(\s+))(([0-9]{1,2})(m|')?)((\s*,\s*)|(\s+))(([0-9]{1,2})(s|")?))/);
+    var m = s.match(/^\s*(((-?[0-9]{1,2})([NnSs])?)((\s*,\s*)|(\s+))(([0-9]{1,2})(m|')?)((\s*,\s*)|(\s+))(([0-9]{1,2})(s|")?))((\s*,\s*)|(\s+))(((-?[0-9]{1,3})([EeWw])?)((\s*,\s*)|(\s+))(([0-9]{1,2})(m|')?)((\s*,\s*)|(\s+))(([0-9]{1,2})(s|")?))\s*$/);
     var ks = [
         'full', 
         'full_lat', null, 'lat_deg', 'lat_dir',
@@ -148,7 +153,7 @@ ddms.parse_dms = function(s) {
     return parsed;
 }
 ddms.parse_decdeg = function(s) {
-    var m = s.match(/((-?[0-9]{1,2}(\.[0-9]+)?)([NnSs])?)((\s*,\s*)|(\s+))(((-?[0-9]{1,3})(\.[0-9]+)?)([WwEe]?))/);
+    var m = s.match(/^\s*((-?[0-9]{1,2}(\.[0-9]+)?)([NnSs])?)((\s*,\s*)|(\s+))(((-?[0-9]{1,3})(\.[0-9]+)?)([WwEe]?))\s*$/);
     var parsed = false;
     if(m) {
         var lat = parseFloat(m[2]);
@@ -170,6 +175,11 @@ ddms.parse_decdeg = function(s) {
         parsed = {
             "lat": lat, "lon": lon
         };
+        if(parsed.lat < -90.0 || parsed.lat > 90.0) {
+            throw new Error('Invalid latitude: out of range.');
+        } else if(parsed.lon < -180.0 || parsed.lon > 180.0) {
+            throw new Error('Invalid longitude: out of range.');
+        }
     }
     return parsed;
 }
@@ -177,13 +187,16 @@ $(document).ready(function() {
     $('#decdeg').keyup(function() {
         var decdeg_s = $(this).val();
         var decdeg_p = null;
+        var err = null;
         try {
             decdeg_p = ddms.parse_decdeg(decdeg_s);
         } catch(e) {
             decdeg_p = false;
+            err = e.message;
         }
         if(decdeg_p) {
             $('#decdeg-wrapper, #dms-wrapper').removeClass('error');
+            $('#status').removeClass('error').addClass('success').text('ok.').show();
             $('#dms').val(
                 dms.dd2dms(decdeg_p.lat, dms.LAT).toString()+
                 ", "+
@@ -191,18 +204,23 @@ $(document).ready(function() {
             );
         } else {
             $('#decdeg-wrapper, #dms-wrapper').addClass('error');
+            $('#status').removeClass('success').addClass('error').show().text(err);
         }
     });
     $('#dms').keyup(function() {
         var dms_s = $(this).val();
         var dms_p = null;
+        var err = null;
         try {
             dms_p = ddms.parse_dms(dms_s);
         } catch(e) {
             dms_p = false;
+            err = e.message
+            console.log(err);
         }
         if(dms_p) {
             $('#decdeg-wrapper, #dms-wrapper').removeClass('error');
+            $('#status').removeClass('error').addClass('success').text('ok.').show();
             $('#decdeg').val(
                 dms.dms2dd(dms_p.lat).toFixed(6)+
                 ', '+
@@ -210,6 +228,7 @@ $(document).ready(function() {
             );
         } else {
             $('#decdeg-wrapper, #dms-wrapper').addClass('error');
+            $('#status').removeClass('success').addClass('error').show().text(err);
         }
 
     });
@@ -246,6 +265,7 @@ $(document).ready(function() {
     <input class="title" type="text" id="dms" value="42N 21' 1&quot;, 71W 6' 23&quot;" />
     </div>
     </fieldset>
+    <div id="status">&nbsp;<div>
     <div id="help" class="container notice">
         <h3>Need Help?</h3>
         <p>Enter decimal degree coordinates in the top box to see the degrees-minutes-seconds equivalent.
