--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ $(document).ready(function() {
     <fieldset>
     <legend>Decimal Minutes</legend>
     <div id="decmin-wrapper">
-    <input class="title" type="text" id="decmin" value="" />
+    <input class="title" type="text" id="decmin" value="42 21.0167N, 71 6.3833W" />
     </div>
     </fieldset>
     <fieldset>
