--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@ $(document).ready(function() {
         <p>Enter decimal degree coordinates in the top box to see the degrees-minutes-seconds equivalent.
         To convert decimal minutes or degrees-minutes-seconds, enter coordinates into the middle or bottom box, respectively.
         </p>
-        <div class="span-8">
-            <p>Decimal degrees can be formatted like any of the following:</p>
+        <div class="span-7">
+            <p><strong>Decimal degrees</strong> can be formatted like any of the following:</p>
             <code>
             42.350278, -71.106389<br />
             42.350278N, 71.106389W<br />
@@ -424,8 +424,8 @@ $(document).ready(function() {
             42.350278N, -71.106389<br />
             </code>
         </div>
-        <div class="span-8">
-            <p>Decimal minutes can be formatted like any of the following:</p>
+        <div class="span-7">
+            <p><strong>Decimal minutes</strong> can be formatted like any of the following:</p>
             <code>
             42 21.0167N, 71 6.3833W<br />
             42 21.0167 -71 6.3833<br />
@@ -434,8 +434,8 @@ $(document).ready(function() {
             -42 21.0167, -71 6.3833<br />
             </code>
         </div>
-        <div class="span-8">
-            <p>DMS coordinates can be formatted like any of the following:</p>
+        <div class="span-7">
+            <p><strong>DMS</strong> coordinates can be formatted like any of the following:</p>
             <code>
             42N 21' 1", 71W 6' 23"<br />
             42N 21 1, 71W 6 23<br />
